--- a/libraries/processAnnotation/build.gradle
+++ b/libraries/processAnnotation/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation 'com.squareup:javapoet:1.11.1'
     implementation 'com.google.auto.service:auto-service:1.0-rc4'
     implementation project(':libAnnotation')
+    compile project(path: ':aopLib')
 }
 
 sourceCompatibility = "1.7"
